--- a/Blockchain/compose/healthcare-compose-ca.yaml
+++ b/Blockchain/compose/healthcare-compose-ca.yaml
@@ -1,4 +1,4 @@
-# E-Voting Certificate Authorities
+# Healthcare Certificate Authorities
 version: '3.7'
 
 networks:
@@ -6,13 +6,13 @@ networks:
     name: healthcare_network
 
 services:
-  ca_election_commission:
+  ca_health_registry:
     image: hyperledger/fabric-ca:1.5.15
     labels:
       service: hyperledger-fabric
     environment:
       - FABRIC_CA_HOME=/etc/hyperledger/fabric-ca-server
-      - FABRIC_CA_SERVER_CA_NAME=ca-election-commission
+      - FABRIC_CA_SERVER_CA_NAME=ca-health-registry
       - FABRIC_CA_SERVER_TLS_ENABLED=true
       - FABRIC_CA_SERVER_PORT=7054
       - FABRIC_CA_SERVER_OPERATIONS_LISTENADDRESS=0.0.0.0:17054
@@ -21,18 +21,18 @@ services:
       - "17054:17054"
     command: sh -c 'fabric-ca-server start -b admin:adminpw -d'
     volumes:
-      - ../organizations/fabric-ca/electionCommissionOrg:/etc/hyperledger/fabric-ca-server
-    container_name: ca_election_commission
+      - ../organizations/fabric-ca/healthRegistryOrg:/etc/hyperledger/fabric-ca-server
+    container_name: ca_health_registry
     networks:
       - healthcare
 
-  ca_political_party:
+  ca_hospital_apollo:
     image: hyperledger/fabric-ca:1.5.15
     labels:
       service: hyperledger-fabric
     environment:
       - FABRIC_CA_HOME=/etc/hyperledger/fabric-ca-server
-      - FABRIC_CA_SERVER_CA_NAME=ca-political-party
+      - FABRIC_CA_SERVER_CA_NAME=ca-hospital-apollo
       - FABRIC_CA_SERVER_TLS_ENABLED=true
       - FABRIC_CA_SERVER_PORT=8054
       - FABRIC_CA_SERVER_OPERATIONS_LISTENADDRESS=0.0.0.0:18054
@@ -41,18 +41,18 @@ services:
       - "18054:18054"
     command: sh -c 'fabric-ca-server start -b admin:adminpw -d'
     volumes:
-      - ../organizations/fabric-ca/politicalPartyOrg:/etc/hyperledger/fabric-ca-server
-    container_name: ca_political_party
+      - ../organizations/fabric-ca/hospitalApolloOrg:/etc/hyperledger/fabric-ca-server
+    container_name: ca_hospital_apollo
     networks:
       - healthcare
 
-  ca_audit_authority:
+  ca_audit_org:
     image: hyperledger/fabric-ca:1.5.15
     labels:
       service: hyperledger-fabric
     environment:
       - FABRIC_CA_HOME=/etc/hyperledger/fabric-ca-server
-      - FABRIC_CA_SERVER_CA_NAME=ca-audit-authority
+      - FABRIC_CA_SERVER_CA_NAME=ca-audit-org
       - FABRIC_CA_SERVER_TLS_ENABLED=true
       - FABRIC_CA_SERVER_PORT=9054
       - FABRIC_CA_SERVER_OPERATIONS_LISTENADDRESS=0.0.0.0:19054
@@ -61,7 +61,7 @@ services:
       - "19054:19054"
     command: sh -c 'fabric-ca-server start -b admin:adminpw -d'
     volumes:
-      - ../organizations/fabric-ca/auditAuthorityOrg:/etc/hyperledger/fabric-ca-server
-    container_name: ca_audit_authority
+      - ../organizations/fabric-ca/auditOrgOrg:/etc/hyperledger/fabric-ca-server
+    container_name: ca_audit_org
     networks:
       - healthcare
