--- a/Blockchain/compose/healthcare-compose-network.yaml
+++ b/Blockchain/compose/healthcare-compose-network.yaml
@@ -1,9 +1,9 @@
 # ============================================================================
-# E-VOTING PHASE 1 FULL: 3 ORDERERS + 4 PEERS (PRODUCTION-READY)
+# HEALTHCARE DATA VAULT PHASE 1: 3 ORDERERS + 4 PEERS (PRODUCTION-READY)
 # ============================================================================
 # Architecture:
 # - 3 Orderers (RAFT consensus) for fault tolerance
-# - 4 Peers (2 Political Party + 2 Audit Authority) for high availability
+# - 4 Peers (2 Hospital Apollo + 2 Audit Org) for high availability
 # ============================================================================
 
 version: '3.7'
@@ -84,7 +84,7 @@ services:
       - FABRIC_LOGGING_SPEC=INFO
       - ORDERER_GENERAL_LISTENADDRESS=0.0.0.0
       - ORDERER_GENERAL_LISTENPORT=7050
-      - ORDERER_GENERAL_LOCALMSPID=ElectionCommissionMSP
+      - ORDERER_GENERAL_LOCALMSPID=HealthRegistryMSP
       - ORDERER_GENERAL_LOCALMSPDIR=/var/hyperledger/orderer/msp
       - ORDERER_GENERAL_BOOTSTRAPMETHOD=none
       - ORDERER_CHANNELPARTICIPATION_ENABLED=true
@@ -128,7 +128,7 @@ services:
       - ORDERER_GENERAL_CAPABILITIES_V3_0=true
       - ORDERER_GENERAL_LISTENADDRESS=0.0.0.0
       - ORDERER_GENERAL_LISTENPORT=8050
-      - ORDERER_GENERAL_LOCALMSPID=ElectionCommissionMSP
+      - ORDERER_GENERAL_LOCALMSPID=HealthRegistryMSP
       - ORDERER_GENERAL_LOCALMSPDIR=/var/hyperledger/orderer/msp
       - ORDERER_GENERAL_BOOTSTRAPMETHOD=none
       - ORDERER_CHANNELPARTICIPATION_ENABLED=true
@@ -172,7 +172,7 @@ services:
       - ORDERER_GENERAL_CAPABILITIES_V3_0=true
       - ORDERER_GENERAL_LISTENADDRESS=0.0.0.0
       - ORDERER_GENERAL_LISTENPORT=9050
-      - ORDERER_GENERAL_LOCALMSPID=ElectionCommissionMSP
+      - ORDERER_GENERAL_LOCALMSPID=HealthRegistryMSP
       - ORDERER_GENERAL_LOCALMSPDIR=/var/hyperledger/orderer/msp
       - ORDERER_GENERAL_BOOTSTRAPMETHOD=none
       - ORDERER_CHANNELPARTICIPATION_ENABLED=true
@@ -215,7 +215,7 @@ services:
       - ORDERER_GENERAL_CAPABILITIES_V3_0=true
       - ORDERER_GENERAL_LISTENADDRESS=0.0.0.0
       - ORDERER_GENERAL_LISTENPORT=10050
-      - ORDERER_GENERAL_LOCALMSPID=ElectionCommissionMSP
+      - ORDERER_GENERAL_LOCALMSPID=HealthRegistryMSP
       - ORDERER_GENERAL_LOCALMSPDIR=/var/hyperledger/orderer/msp
       - ORDERER_GENERAL_BOOTSTRAPMETHOD=none
       - ORDERER_CHANNELPARTICIPATION_ENABLED=true
@@ -248,7 +248,7 @@ services:
 
 
   # ===========================================================================
-  # PEER 0 - Political Party (Primary)
+  # PEER 0 - Hospital Apollo (Primary)
   # ===========================================================================
   peer0.hospitalapollo.healthcare.com:
     container_name: peer0.hospitalapollo.healthcare.com
@@ -271,7 +271,7 @@ services:
       - CORE_PEER_CHAINCODELISTENADDRESS=0.0.0.0:7052
       - CORE_PEER_GOSSIP_BOOTSTRAP=peer1.hospitalapollo.healthcare.com:8051
       - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer0.hospitalapollo.healthcare.com:7051
-      - CORE_PEER_LOCALMSPID=PoliticalPartyMSP
+      - CORE_PEER_LOCALMSPID=HospitalApolloMSP
       - CORE_PEER_MSPCONFIGPATH=/etc/hyperledger/fabric/msp
       - CORE_OPERATIONS_LISTENADDRESS=peer0.hospitalapollo.healthcare.com:7446
       - CORE_METRICS_PROVIDER=prometheus
@@ -301,7 +301,7 @@ services:
       - healthcare
 
   # ===========================================================================
-  # PEER 1 - Political Party (Backup)
+  # PEER 1 - Hospital Apollo (Backup)
   # ===========================================================================
   peer1.hospitalapollo.healthcare.com:
     container_name: peer1.hospitalapollo.healthcare.com
@@ -324,7 +324,7 @@ services:
       - CORE_PEER_CHAINCODELISTENADDRESS=0.0.0.0:8052
       - CORE_PEER_GOSSIP_BOOTSTRAP=peer0.hospitalapollo.healthcare.com:7051
       - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer1.hospitalapollo.healthcare.com:8051
-      - CORE_PEER_LOCALMSPID=PoliticalPartyMSP
+      - CORE_PEER_LOCALMSPID=HospitalApolloMSP
       - CORE_PEER_MSPCONFIGPATH=/etc/hyperledger/fabric/msp
       - CORE_OPERATIONS_LISTENADDRESS=peer1.hospitalapollo.healthcare.com:9447
       - CORE_METRICS_PROVIDER=prometheus
@@ -354,7 +354,7 @@ services:
       - healthcare
 
   # ===========================================================================
-  # PEER 0 - Audit Authority (Primary)
+  # PEER 0 - Audit Org (Primary)
   # ===========================================================================
   peer0.auditorg.healthcare.com:
     container_name: peer0.auditorg.healthcare.com
@@ -377,7 +377,7 @@ services:
       - CORE_PEER_CHAINCODELISTENADDRESS=0.0.0.0:9052
       - CORE_PEER_GOSSIP_BOOTSTRAP=peer1.auditorg.healthcare.com:10051
       - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer0.auditorg.healthcare.com:9051
-      - CORE_PEER_LOCALMSPID=AuditAuthorityMSP
+      - CORE_PEER_LOCALMSPID=AuditOrgMSP
       - CORE_PEER_MSPCONFIGPATH=/etc/hyperledger/fabric/msp
       - CORE_OPERATIONS_LISTENADDRESS=peer0.auditorg.healthcare.com:9448
       - CORE_METRICS_PROVIDER=prometheus
@@ -407,7 +407,7 @@ services:
       - healthcare
 
   # ===========================================================================
-  # PEER 1 - Audit Authority (Backup)
+  # PEER 1 - Audit Org (Backup)
   # ===========================================================================
   peer1.auditorg.healthcare.com:
     container_name: peer1.auditorg.healthcare.com
@@ -430,7 +430,7 @@ services:
       - CORE_PEER_CHAINCODELISTENADDRESS=0.0.0.0:10052
       - CORE_PEER_GOSSIP_BOOTSTRAP=peer0.auditorg.healthcare.com:9051
       - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer1.auditorg.healthcare.com:10051
-      - CORE_PEER_LOCALMSPID=AuditAuthorityMSP
+      - CORE_PEER_LOCALMSPID=AuditOrgMSP
       - CORE_PEER_MSPCONFIGPATH=/etc/hyperledger/fabric/msp
       - CORE_OPERATIONS_LISTENADDRESS=peer1.auditorg.healthcare.com:9449
       - CORE_METRICS_PROVIDER=prometheus
